# phase2

.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
hackathon-todo/: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md
hackathon-todo/backend/: pyproject.toml  requirements.txt
hackathon-todo/backend/src/: auth.py  database.py  main.py  models.py
hackathon-todo/backend/src/routes/: tasks.py
hackathon-todo/backend/src/services/: task_service.py
hackathon-todo/backend/src/utils/: logging.py
hackathon-todo/backend/tests/: conftest.py  test_auth.py  test_tasks.py
hackathon-todo/frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
hackathon-todo/frontend/app/: layout.tsx  page.tsx
hackathon-todo/frontend/app/(auth)/signin/: page.tsx
hackathon-todo/frontend/app/(auth)/signout/: page.tsx
hackathon-todo/frontend/app/(auth)/signup/: page.tsx
hackathon-todo/frontend/app/context/: auth-context.tsx
hackathon-todo/frontend/app/dashboard/: page.tsx
hackathon-todo/frontend/components/: auth-form.tsx  filter-tabs.tsx  search-bar.tsx  task-card.tsx  task-form.tsx  task-list.tsx
hackathon-todo/frontend/lib/: api.ts
hackathon-todo/shared/: types.ts
history/prompts/general/: 1-fix-module-resolution-error.general.prompt.md
specs/001-beautiful-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-beautiful-todo-app/checklists/: requirements.md
specs/001-beautiful-todo-app/contracts/: todo-api-openapi.yaml
