[project]
name = "beautiful-todo-backend"
version = "0.1.0"
description = "Backend for the Beautiful Todo Web App"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "better-auth>=0.0.1",
    "python-multipart>=0.0.6",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "emails>=0.6",
    "jinja2>=3.1.2"
]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "black>=23.10.1",
    "flake8>=6.1.0",
    "mypy>=1.7.1"
]